Fix newsletter block spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -434,7 +434,9 @@ float:left;
 
 }
 // Footer
-
+.footer-wrap {
+	margin-top: 100px;
+}
 .site-footer {
 	background-color: #2962FF;
 	color: #fff;
